Fix next/prev buttons not aligned properly on mobile

--- a/assets/css/frontend.scss
+++ b/assets/css/frontend.scss
@@ -417,7 +417,10 @@ a.sensei-certificate-link {
 .sensei-quiz-pagination__nav {
 	display: flex;
 	align-items: center;
-	margin-left: auto;
+
+	@media only screen and (min-width: 768px) {
+		margin-left: auto;
+	}
 
 	.wp-block-buttons {
 		gap: 0.5em;
